# replication-stats

./: README.md
.github/workflows/: ci.yaml
analisys/: reader.py
captures/capture1_default_settings/: 10101.count  10101.ts  10101.val  9000.count  9000.ts  9000.val
captures/capture2_small_settings/: 10101.count  10101.ts  10101.val  9000.count  9000.ts  9000.val
captures/capture3_more_data/: 10101.count  10101.ts  10101.val  9000.count  9000.ts  9000.val
captures/capture4_1row_small_settings_long_window/: 10101.count  10101.ts  10101.val  9000.count  9000.ts  9000.val
captures/capture5_10_row_small_settings_long_window/: 10101.count  10101.ts  10101.val  9000.count  9000.ts  9000.val
captures/capture6_1line_defaults/: 10101.count  10101.ts  10101.val  9000.count  9000.ts  9000.val
captures/capture7_1line_small_segment/: 10101.count  10101.ts  10101.val  9000.count  9000.ts  9000.val
captures/capture8_1line_small_segment_small_sequencer/: 10101.ts  10101.val  9000.count  9000.ts  9000.val
captures/capture9_150_tables_small/: 10101.count  10101.ts  10101.val  9000.count  9000.ts  9000.val
ilp-http-traffic-generator/: Cargo.toml  README.md
ilp-http-traffic-generator/src/: main.rs
net-traffic-capture/: Cargo.toml  README.md
net-traffic-capture/src/: literal_bytes.rs  main.rs  writer.rs
