[package]
name = "ilp-http-traffic-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
go-parse-duration = "0.1.1"
questdb-rs = { git = "https://github.com/questdb/c-questdb-client", features = ["ilp-over-http"] }
