[package]
name = "net-traffic-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
etherparse = "0.13.0"
libc = "0.2.153"
memmap2 = "0.9.4"
page_size = "0.6.0"
pcap = "1.2.0"
